LaTex: final fixes and improvements

--- a/LaTex/apendices/apendice02.tex
+++ b/LaTex/apendices/apendice02.tex
@@ -10,7 +10,7 @@ En este apéndice se presentan dos experimentos relacionados con el uso de difer
 \begin{figure}[h!]
     \centering
     \includegraphics[width=0.65\textwidth]{img/experiments/batch_sizes_ddd.png}
-    \caption[\textit{Deep Double Descent} para distintos tamaños de \textit{batch}.]{Error en test respecto a distintas configuraciones de tamaño de \textit{batch} de la red $2$NN sobre el subconjunto MNIST[$4000/1000$] con $10$\% de ruido añadido. Se observa el fenómeno bajo las diferentes configuraciones, destacando que al emplear tamaños de \textit{batch} mayores, el error tiende a presentar menos oscilaciones.}\label{fig:dddbatchsizes}
+    \caption[\textit{Deep Double Descent} para distintos tamaños de \textit{batch}.]{Error en test respecto a distintas configuraciones de tamaño de \textit{batch} de la red $2$NN sobre el subconjunto MNIST[$4000/1000$] con $10$\% de ruido añadido. Se observa el fenómeno bajo las diferentes configuraciones, destacando que, al emplear tamaños de \textit{batch} mayores, el error tiende a presentar menos oscilaciones.}\label{fig:dddbatchsizes}
 \end{figure}
 
 En la Figura~\ref{fig:dddbatchsizes} se observa que, para distintas configuraciones de tamaño de \textit{batch}, se manifiesta el \textit{Deep Double Descent}, siendo más notable (sin tantos altibajos en la curva del error) al utilizar tamaños mayores, debido a que se utiliza un mayor número de ejemplos para actualizar los parámetros en cada iteración. Por otro lado, la Tabla~\ref{tab:dddbatchsizes} muestra que, al incrementar el tamaño de \textit{batch}, el tiempo de entrenamiento disminuye, lo cual es lógico, ya que se procesan un mayor número de ejemplos en cada iteración. Por tanto, considerando ambos resultados, se concluye que utilizar un tamaño de \textit{batch} elevado ($128$ o $256$) es la opción adecuada para los distintos experimentos a realizar, ya que permite observar el fenómeno de forma más precisa y con menor coste computacional.
