--- a/LaTex/apendices/apendice04.tex
+++ b/LaTex/apendices/apendice04.tex
@@ -29,14 +29,14 @@ Nos centramos en la gráfica de la Figura~\ref{fig:model-epoch3CNNCIFAR10}, dond
 \begin{figure}[h!]
     \centering
     \includegraphics[width=0.65\textwidth]{img/experiments/epoch-wiseMNIST.png}
-    \caption[Error en test respecto a distintas configuraciones altamente sobreparametrizadas de la red $2$NN.]{Error en test respecto a distintas configuraciones altamente sobreparametrizadas de la red $2$NN sobre el subconjunto MNIST[$4000/1000$], con $10$\% de ruido añadido y entrenadas durante $5000$ épocas. Se observan repuntes en la curva del error, los cuales se atenúan progresivamente a medida que se avanza en el entrenamiento. Descamos también que dichos picos tienden a ser menos pronunciados cuando el tamaño del modelo es mayor.}\label{fig:epoch-wiseMNIST}
+    \caption[Error en test respecto a distintas configuraciones altamente sobreparametrizadas de la red $2$NN.]{Error en test respecto a distintas configuraciones altamente sobreparametrizadas de la red $2$NN sobre el subconjunto MNIST[$4000/1000$], con $10$\% de ruido añadido y entrenadas durante $5000$ épocas. Se observan repuntes en la curva del error, los cuales se atenúan progresivamente a medida que se avanza en el entrenamiento. Destacamos también que dichos picos tienden a ser menos pronunciados cuando el tamaño del modelo es mayor.}\label{fig:epoch-wiseMNIST}
 \end{figure}
 
 Para intentar dar una explicación coherente a la conducta, ciertamente peculiar, que se observa en estas gráficas, recordemos algunos de los resultados presentados en la Sección~\ref{sec:optimizacion-zona-sobreparametrizada}. En la zona infraparametrizada, sabemos que los mínimos locales suelen estar aislados, lo que provoca que el paisaje de la función de pérdida en sus alrededores sea localmente convexo (véase imagen izquierda de la Figura~\ref{fig:localglobalminima}).
 
 Debido a esto, la inicialización del optimizador juega un papel crucial, ya que determinará hacia qué mínimo local convergerá. En particular, el optimizador tiende a dirigirse hacia el mínimo local más cercano a su punto de inicio. Dado que la región circundante es localmente convexa, el optimizador avanzará progresivamente hacia dicho mínimo sin posibilidad de escapar de él, siempre que la tasa de aprendizaje sea adecuada. Este comportamiento explica por qué, en la zona infraparametrizada, la pérdida en entrenamiento sigue una tendencia descendente y converge de manera estable. Al no haber direcciones de escape significativas, el optimizador se mantiene atrapado en el mínimo local alcanzado, lo que se traduce en una reducción progresiva y sostenida de la pérdida a lo largo del proceso de optimización. Sin embargo, debido a la limitada capacidad del modelo en esta región, el error en el conjunto de test permanece elevado, reflejando una falta de flexibilidad para ajustarse adecuadamente a los datos (véase Figura~\ref{fig:epoch-wise3CNNunderparameterized}).
 
-En cambio, en la zona sobreparametrizada, los mínimos globales no están aislados, sino que en cualquier pequeña vecindad de ellos siempre es posible encontrar otro minimizador global (véase Sección~\ref{sec:optimizacion-zona-sobreparametrizada}). Esto implica que la función de pérdida presenta una alta no convexidad, incluso a nivel local. Como resultado, el paisaje de la función de pérdida en estos modelos es multimodal, como se ilustra en la imagen izquierda de la Figura~\ref{fig:landscapes}. Aunque dicha imagen muestre únicamente un mínimo global en un espacio tridimensional, es importante recordar que existen múltiples de ellos en las dimensiones definidas por el espacio de parámetros. En otras palabras, paisajes similares a este (aunque más complejos debido a su alta dimensionalidad) se replicarían en distintas regiones del espacio de parámetros, dando lugar a un paisaje altamente multimodal con una multitud de mínimos globales. 
+En cambio, en la zona sobreparametrizada, los mínimos globales no están aislados, sino que en cualquier pequeño entorno de ellos siempre es posible encontrar otro minimizador global (véase Sección~\ref{sec:optimizacion-zona-sobreparametrizada}). Esto implica que la función de pérdida presenta una alta no convexidad, incluso a nivel local. Como resultado, el paisaje de la función de pérdida en estos modelos es multimodal, como se ilustra en la imagen izquierda de la Figura~\ref{fig:landscapes}. Aunque dicha imagen muestre únicamente un mínimo global en un espacio tridimensional, es importante recordar que existen múltiples de ellos en las dimensiones definidas por el espacio de parámetros. En otras palabras, paisajes similares a este (aunque más complejos debido a su alta dimensionalidad) se replicarían en distintas regiones del espacio de parámetros, dando lugar a un paisaje altamente multimodal con una multitud de mínimos globales. 
 
 \begin{figure}[h!]
     \centering
@@ -49,7 +49,7 @@ En cambio, en la zona sobreparametrizada, los mínimos globales no están aislad
         \centering
         \includegraphics[width=\linewidth]{img/experiments/landscapeunimodal.png}
     \end{minipage}
-    \caption[Paisajes de la función de pérdida para distintos modelos sobreparametrizados~\cite{Li2018}.]{Paisajes de la función de pérdida para un modelo sobreparametrizado sin conexiones residuales (izquierda) y con conexiones residuales (derecha)~\cite{Li2018}. A la izquierda, se observa un único mínimo global en un entorno altamente multimodal. A la derecha, se observa un único mínimo global en un entorno unimodal, fruto de las conexiones residuales.}\label{fig:landscapes}
+    \caption[Paisajes de la función de pérdida para distintos modelos sobreparametrizados~\cite{Li2018}.]{Paisajes de la función de pérdida para un modelo sobreparametrizado sin conexiones residuales (izquierda) y con conexiones residuales (derecha)~\cite{Li2018}. A la izquierda, se observa un único mínimo global en un entorno altamente multimodal. A la derecha, se visualiza también un único mínimo global, pero en un entorno unimodal, fruto de las conexiones residuales.}\label{fig:landscapes}
 \end{figure} 
 
 A partir de estos resultados, podemos inferir que el algoritmo de optimización, una vez ha alcanzado una solución prácticamente perfecta (es decir, al encontrar un mínimo, potencialmente global, de la función de pérdida), continúa explorando en busca de soluciones aún mejores (en términos de generalización). Este proceso, debido a la naturaleza del paisaje multimodal en el que opera, provoca que el modelo pueda salir de dicho mínimo, lo que da lugar a los picos observados, para luego converger hacia otro mínimo potencialmente global.
