--- a/LaTex/capitulos/fundamentos_matematicos.tex
+++ b/LaTex/capitulos/fundamentos_matematicos.tex
@@ -497,7 +497,7 @@ Como consecuencia de la primera propiedad de la proposición anterior, se pueden
 \begin{figure}[h]
     \centering
     \includegraphics[width=0.9\textwidth]{img/distribuciones-normales.png}
-    \caption[Ejemplos de distribuciones normales.] {Ejemplos de distribuciones normales. A la izquierda observamos distintas distribuciones normales, donde podemos notar como el parámetro $\mu$ determina el centro de la distribución y el parámetro $\sigma$ controla la dispersión de los datos. A medida que el parámetro $\sigma$ incrementa, la distribución se vuelve más dispersa y su altura máxima disminuye. A la derecha observamos una distribución normal estándar, donde se puede apreciar con claridad que la distribución es simétrica con respecto a $\mu$.}\label{fig:distribuciones-normales}
+    \caption[Ejemplos de distribuciones normales.] {Ejemplos de distribuciones normales. A la izquierda, observamos distintas distribuciones normales, donde podemos notar como el parámetro $\mu$ determina el centro de la distribución y el parámetro $\sigma$ controla la dispersión de los datos. A medida que el parámetro $\sigma$ incrementa, la distribución se vuelve más dispersa y su altura máxima disminuye. A la derecha, observamos una distribución normal estándar, donde se puede apreciar con claridad que la distribución es simétrica con respecto a $\mu$.}\label{fig:distribuciones-normales}
 \end{figure}
 
 \subsection{Distribución de Rademacher}\label{subsec:distribucion-rademacher}
